--- a/index.html
+++ b/index.html
@@ -1,38 +1,115 @@
-from playwright.sync_api import sync_playwright
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Imagens Bizarras do Google Street View</title>
 
-with sync_playwright() as p:
-    browser = p.chromium.launch(headless=False)
-    page = browser.new_page()
-    urls = []
+    <!-- Meta Tags para SEO e compartilhamento -->
+    <meta name="description" content="Uma galeria com imagens bizarras e curiosas capturadas pelo Google Street View." />
+    <meta name="author" content="Seu Nome" />
 
-    # Acessa a página
-    page.goto(
-        'https://www.uol.com.br/tilt/album/2022/03/28/perolas-google-maps.htm',
-        timeout=50000
-    )
-    
-    # Rola a página para baixo para carregar imagens que usam lazy loading
-    for _ in range(5):
-        page.mouse.wheel(0, 1000)
-        page.wait_for_timeout(1500)  # Aguarda o carregamento das imagens visíveis
+    <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+    <meta property="og:title" content="Imagens Bizarras do Google Street View" />
+    <meta property="og:description" content="Confira imagens estranhas, engraçadas e inesperadas flagradas pelas câmeras do Google Street View." />
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/2/2c/Google_Street_View_car_front.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://seudominio.com/imagens-bizarras.html" />
 
-    # Coleta todos os elementos <img> da página
-    imagens = page.locator('img').element_handles()
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Imagens Bizarras do Google Street View" />
+    <meta name="twitter:description" content="Veja os registros mais bizarros do Google Street View em uma galeria divertida." />
+    <meta name="twitter:image" content="https://upload.wikimedia.org/wikipedia/commons/2/2c/Google_Street_View_car_front.jpg" />
 
-    # Extensões válidas para imagens
-    extensoes_validas = ('.png', '.jpeg', '.jpg', '.gif', '.bmp', '.webp')
+    <!-- Estilo CSS -->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f2f5;
+            margin: 0;
+            padding: 20px;
+            text-align: center;
+            color: #333;
+        }
 
-    # Extrai os atributos src das imagens e filtra pelas extensões
-    for img in imagens:
-        src = img.get_attribute('src')
-        if src and src.lower().endswith(extensoes_validas):
-            urls.append(f'"{src}"')  # Ou sem aspas: urls.append(src)
+        h1 {
+            margin-bottom: 0.5em;
+        }
 
-    # Junta as URLs com vírgula ou apenas exibe uma por linha
-    final = ',\n '.join(urls)
-    print(final)
-    with open(r'C:\Users\vitor\Desktop\imagenslinks.txt','a+', encoding='utf-8') as file:
-        file.write(final)
+        #ads {
+            margin-bottom: 1em;
+        }
 
-    # Fecha o navegador
-    browser.close()
+        #ads a {
+            text-decoration: none;
+            font-weight: bold;
+            color: #ff5722;
+            transition: color 0.3s ease;
+        }
+
+        #ads a:hover,
+        #ads a:focus {
+            color: #e64a19;
+            outline: none;
+        }
+
+        #galeria {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 15px;
+            margin-top: 20px;
+        }
+
+        #galeria img {
+            width: 300px;
+            height: auto;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease;
+            cursor: pointer;
+        }
+
+        #galeria img:hover,
+        #galeria img:focus {
+            transform: scale(1.05);
+            outline: none;
+        }
+
+        #btn {
+            background-color: #ff5722;
+            color: white;
+            border: none;
+            padding: 12px 24px;
+            font-size: 16px;
+            border-radius: 6px;
+            cursor: pointer;
+            margin-top: 20px;
+            transition: background-color 0.3s ease;
+        }
+
+        #btn:hover,
+        #btn:focus {
+            background-color: #e64a19;
+            outline: none;
+        }
+    </style>
+</head>
+<body>
+    <h1>Imagens Bizarras do Google Street View</h1>
+
+    <div id="ads" role="complementary" aria-label="Publicidade">
+        <a href="https://victorxx.github.io/piadarandomico01/" target="_blank" rel="noopener noreferrer">
+            CONFIRA ESSA OPORTUNIDADE
+        </a>
+    </div>
+
+    <button id="btn" aria-label="Carregar imagens bizarras">Carregar Imagens</button>
+
+    <main id="galeria" aria-live="polite" aria-relevant="additions"></main>
+
+    <!-- Seu script JavaScript -->
+    <script src="imagens.js" defer></script>
+</body>
+</html>
