--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Meta Tags para SEO e compartilhamento -->
     <meta name="description" content="Uma galeria com imagens bizarras e curiosas capturadas pelo Google Street View." />
-    <meta name="author" content="Seu Nome" />
+    <meta name="author" content="victorsaib" />
 
     <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
     <meta property="og:title" content="Imagens Bizarras do Google Street View" />
